--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,25 +1,29 @@
 {
     "env": {
-        "commonjs": true,
         "es6": true,
         "node": true
     },
     "extends": [
-        "airbnb-base",
+        "plugin:@typescript-eslint/recommended",
         "plugin:jest/all",
-        "plugin:prettier/recommended"
+        "plugin:prettier/recommended",
+        "airbnb-base"
     ],
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
     },
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": 2018
+        "ecmaVersion": 2018,
+        "sourceType": "module"
     },
     "plugins": [
+        "@typescript-eslint",
         "jest"
     ],
     "rules": {
-        "arrow-body-style": ["error", "as-needed"]
+        "arrow-body-style": ["error", "as-needed"],
+        "arrow-parens": 0
     }
 }
