--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Questões de Lógica de Programação",
   "main": "index.js",
   "scripts": {
+    "build": "sucrase ./src -d ./lib --transforms typescript,imports",
     "test": "jest"
   },
   "repository": {
@@ -18,6 +19,8 @@
   },
   "homepage": "https://github.com/MatheusFelipe/PS-LP#readme",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.17.0",
+    "@typescript-eslint/parser": "^2.17.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.9.0",
@@ -25,7 +28,9 @@
     "eslint-plugin-jest": "^23.6.0",
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^25.1.0",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "sucrase": "^3.12.1",
+    "typescript": "^3.7.5"
   },
   "prettier": {
     "trailingComma": "es5",
